# DogTrackerBackend

./: .env.sample  .gitignore  .pre-commit-config.yaml  ReadMe.md  docker-compose.yml  dockerfile  pyproject.toml
dog_tracker_telemetry_dbt/: .user.yml  dbt_project.yml  profiles.yml
dog_tracker_telemetry_dbt/models/: mart_bad_signal_cells.sql  sources.yml  stg_telemetry_enriched.sql
dog_tracker_telemetry_dbt/tests/mart/: no_invalid_avg_signal_in_mart.sql  no_invalid_battery_in_raw.sql  no_invalid_coordinates_in_raw.sql  no_invalid_heart_rate_in_raw.sql  no_invalid_rejection_ratio_in_mart.sql  no_invalid_signal_strength_in_raw.sql  no_negative_steps_in_raw.sql
dog_tracker_telemetry_dbt/tests/telemetry_raw/: no_invalid_battery_in_clean.sql  no_invalid_coordinates_in_clean.sql  no_invalid_heart_rate_in_clean.sql  (+2 more)
frontend/: app.py  map_config.py  map_layers.py  pipeline_indicator.py  signal_zone_map.py
scripts/: run_dbt_loop.py  run_dbt_tests.py  validate_env.py
simulator/: collar_client.py  corruption.py  movement.py  physiology.py  run_simulator.py  state.py  state_write.py  zones.py
src/: enums.py  helpers.py
src/api/: exceptions.py  main.py
src/core/: logging.py  settings.py
src/db/: base.py  session.py
src/enums/: issue_type.py
src/jobs/: duplicate_detection_job.py
src/services/: analytics_service.py  data_quality_issue_service.py  dog_service.py  health_service.py  telemetry_service.py
src/spark/: duplicate_detection.py  session.py
src/tests/: conftest.py
src/validation/: dog_validation.py  helpers.py  telemetry_checks.py
(+25 files in other folders)
