[project]
name = "dogtrackerbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "uvicorn[standard]>=0.44.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.10",
    "pre-commit>=4.5.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"